# Fremer-Tours-API/routes/destinations.js
@@ -1,4 +1,5 @@
 import express from "express";
+import { isAuthenticated } from "../middleware/authenticate.js";
 
 import {
   getAllDestinations,
@@ -11,18 +12,18 @@ import {
 const router = express.Router();
 
 // GET all destinations
-router.get("/", getAllDestinations);
+router.get("/", isAuthenticated, getAllDestinations);
 
 // GET one destination
-router.get("/:id", getDestinationById);
+router.get("/:id", isAuthenticated, getDestinationById);
 
 // POST create a destination
-router.post("/", createDestination);
+router.post("/", isAuthenticated, createDestination);
 
 // PUT update a destination
-router.put("/:id", updateDestination);
+router.put("/:id", isAuthenticated, updateDestination);
 
 // DELETE a destination
-router.delete("/:id", deleteDestination);
+router.delete("/:id", isAuthenticated, deleteDestination);
 
 export default router;
