# Fremer-Tours-API/server.js
@@ -1,15 +1,17 @@
 import express from "express";
 import cors from "cors";
-import dotenv from "dotenv";
+import  "dotenv/config";
 import swaggerUi from "swagger-ui-express";
 import swaggerDocument from "./swagger.json" with { type: "json" };
+import session from "express-session";
+import passport from "./config/passport.js";
 
 
 import connectDB from "./config/db.js";
 import destinationRoutes from "./routes/destinations.js";
 import bookingRoutes from "./routes/bookings.js";
+import authRoutes from "./routes/auth.js";
 
-dotenv.config();
 
 const app = express();
 const PORT = process.env.PORT || 8080;
@@ -20,6 +22,20 @@ app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 // Middleware
 app.use(cors());
 app.use(express.json());
+app.use(
+  session({
+    secret: process.env.SESSION_SECRET,
+    resave: false,
+    saveUninitialized: false,
+    cookie: {
+      secure: false
+    }
+  })
+);
+
+app.use(passport.initialize());
+app.use(passport.session());
+
 
 app.get("/", (req, res) => {
   res.status(200).json({
@@ -31,6 +47,7 @@ app.get("/", (req, res) => {
 // Routes
 app.use("/destinations", destinationRoutes);
 app.use("/bookings", bookingRoutes);
+app.use("/auth", authRoutes);
 
 // Connect to MongoDB
 connectDB();
